Implement APK analysis backend with database models
Added FastAPI endpoints for APK upload and analysis, database models for APKs, permissions, components, and endpoints, and supporting services for manifest parsing, permission checking, decompilation, and logging. Introduced SQLAlchemy-based CRUD operations, configuration management, and file handling utilities. Updated .env.example, requirements, and Docker Compose for new features and structure.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 DATABASE_URL=sqlite:///./apkscanner.db
-UPLOAD_DIR=./temp
+TEMP_DIR=./temp
+LOGS_DIR=./logs
+APKTOOL_PATH=apktool
 LOG_LEVEL=INFO
-MAX_FILE_SIZE=104857600  
+MAX_FILE_SIZE=104857600  # 100MB
+UVICORN_HOST=0.0.0.0
+UVICORN_PORT=8000  
