--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-androguard==3.4.0a1
 sqlalchemy==2.0.23
+androguard==3.4.0a1
 pydantic==2.5.0
 python-multipart==0.0.6
+alembic==1.12.1
+xml.etree.ElementTree
+lxml==4.9.3
+requests==2.31.0
