--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 androguard==3.4.0a1
 pydantic==2.5.0
+pydantic-settings==2.1.0
 python-multipart==0.0.6
 alembic==1.12.1
-xml.etree.ElementTree
 lxml==4.9.3
 requests==2.31.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
