--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
-androguard==3.4.0a1
+# androguard==3.4.0a1  # Requires Rust - install separately if needed
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-multipart==0.0.6
