--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-androguard==3.4.0a1  # Requires Rust - install separately if needed
-pydantic==2.5.0
-pydantic-settings==2.1.0
+fastapi==0.124.0
+uvicorn[standard]==0.38.0
+sqlalchemy==2.0.44
+androguard==4.1.3
+pydantic==2.12.5
+pydantic-settings==2.12.0
 python-multipart==0.0.6
 alembic==1.12.1
 lxml==4.9.3
-requests==2.31.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
+requests==2.32.3
+pytest==8.3.4
+pytest-asyncio==0.23.0
