Update Docker setup and config paths for improved structure
Added .dockerignore to exclude unnecessary files from Docker builds. Enhanced Dockerfile with environment variables, additional dependencies, and improved APKTool installation. Updated docker-compose.yml to use new data directory structure and environment variables. Modified config.py to use relative paths for temp and logs directories by default.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,21 +1,40 @@
 FROM python:3.11-slim
 
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    APKTOOL_VERSION=2.10.0
+
 WORKDIR /app
 
-# Install APKTool and dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     default-jre \
     wget \
+    curl \
+    git \
+    libxml2-dev \
+    libxslt-dev \
+    zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Install APKTool
-RUN wget https://raw.githubusercontent.com/iBotPeaches/Apktool/master/scripts/linux/apktool \
-    && chmod +x apktool \
-    && mv apktool /usr/local/bin/
+RUN wget https://raw.githubusercontent.com/iBotPeaches/Apktool/master/scripts/linux/apktool -O /usr/local/bin/apktool \
+    && wget https://bitbucket.org/iBotPeaches/apktool/downloads/apktool_${APKTOOL_VERSION}.jar -O /usr/local/bin/apktool.jar \
+    && chmod +x /usr/local/bin/apktool /usr/local/bin/apktool.jar
 
+# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy project files
 COPY . .
 
+# Create necessary directories
+RUN mkdir -p temp logs data && chmod 777 temp logs data
+
+# Expose port
+EXPOSE 8000
+
+# Command to run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
