--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,15 +2,17 @@ version: '3.8'
 
 services:
   apkscanner:
-    build: .
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
     ports:
       - "8000:8000"
     volumes:
-      - ./temp:/app/temp
-      - ./logs:/app/logs
-      - ./apkscanner.db:/app/apkscanner.db
+      - ../temp:/app/temp
+      - ../logs:/app/logs
+      - ../data:/app/data
     environment:
-      - DATABASE_URL=sqlite:///./apkscanner.db
-      - TEMP_DIR=./temp
-      - LOGS_DIR=./logs
+      - DATABASE_URL=sqlite:////app/data/apkscanner.db
+      - TEMP_DIR=/app/temp
+      - LOGS_DIR=/app/logs
     restart: unless-stopped
