--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ alembic==1.12.1
 lxml==4.9.3
 requests==2.32.3
 pytest==8.3.4
-pytest-asyncio==0.23.0
+pytest-asyncio==0.23.0gunicorn==23.0.0
+uvloop==0.21.0
