--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-fastapi==0.124.0
-uvicorn[standard]==0.38.0
-sqlalchemy==2.0.44
-androguard==4.1.3
-pydantic==2.12.5
-pydantic-settings==2.12.0
-python-multipart==0.0.6
-alembic==1.12.1
-lxml==4.9.3
-requests==2.32.3
-pytest==8.3.4
-pytest-asyncio==0.23.0gunicorn==23.0.0
-uvloop==0.21.0
+fastapi
+uvicorn
+sqlalchemy
+androguard
+pydantic
+pydantic-settings
+python-multipart
+alembic
+lxml
+requests
+pytest
+pytest-asyncio
+gunicorn; sys_platform != 'win32'
+uvloop; sys_platform != 'win32'
